unpackaged/main/default/objects/ET_Terms_and_Conditions__c/ET_Terms_and_Conditions__c.object-meta.xml
<CustomObject>
    <label>Terms and Conditions</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Terms and Conditions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>