unpackaged/main/default/objects/ET_Terms_and_Conditions__c/fields/ET_Condition__c.field-meta.xml
<CustomField>
    <fullName>ET_Condition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>