unpackaged/main/default/objects/ET_Terms_and_Conditions__c/fields/ET_Service_Name__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Name__c</fullName>
    <label>Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Inspection</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>