unpackaged/main/default/objects/ET_Terms_and_Conditions__c/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Footer Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>