unpackaged/main/default/objects/ET_Terms_and_Conditions__c/fields/Header_Line__c.field-meta.xml
<CustomField>
    <fullName>Header_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Header Line</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>