unpackaged/main/default/objects/ET_Terms_and_Conditions__c/fields/Place_of_Visisbility__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Visisbility__c</fullName>
    <label>Place of Visisbility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Registration</fullName>
            </value>
            <value>
                <fullName>Vehicle Unregistered</fullName>
            </value>
            <value>
                <fullName>Payment Page</fullName>
            </value>
            <value>
                <fullName>School Payment</fullName>
            </value>
            <value>
                <fullName>Add Child</fullName>
            </value>
            <value>
                <fullName>Book Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>