unpackaged/main/default/objects/ET_Terms_and_Conditions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ET_Condition__c</columns>
    <columns>Header_Line__c</columns>
    <columns>Order__c</columns>
    <columns>Place_of_Visisbility__c</columns>
    <columns>language__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>