unpackaged/main/default/objects/ET_Terms_and_Conditions__c/listViews/ET_School_Transport.listView-meta.xml
<ListView>
    <fullName>ET_School_Transport</fullName>
    <columns>NAME</columns>
    <columns>ET_Service_Name__c</columns>
    <columns>Order__c</columns>
    <columns>ET_Condition__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>ET School Transport</label>
</ListView>